lab1/Example/ParCalc.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParCalc.y
-----------------------------------------------------------------------------

state 14 contains 5 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp -> Exp                                 (0)
	%start_pExp1 -> Exp1                               (1)
	%start_pExp2 -> Exp2                               (2)
	Integer -> L_integ                                 (3)
	Exp -> Exp '+' Exp1                                (4)
	Exp -> Exp '-' Exp1                                (5)
	Exp -> Exp Exp 'iadd'                              (6)
	Exp -> Exp Exp                                     (7)
	Exp -> Exp1                                        (8)
	Exp1 -> Exp1 '*' Exp2                              (9)
	Exp1 -> Exp1 '/' Exp2                              (10)
	Exp1 -> Exp2                                       (11)
	Exp2 -> Integer                                    (12)
	Exp2 -> '(' Exp ')'                                (13)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	'-'            { PT _ (TS _ 5) }
	'/'            { PT _ (TS _ 6) }
	'iadd'         { PT _ (TS _ 7) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp     rule  0
	%start_pExp1    rule  1
	%start_pExp2    rule  2
	Integer         rule  3
	Exp             rules 4, 5, 6, 7, 8
	Exp1            rules 9, 10, 11
	Exp2            rules 12, 13

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pExp -> . Exp                                (rule 0)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 10
	Exp1           goto state 11
	Exp2           goto state 9

State 1

	%start_pExp1 -> . Exp1                              (rule 1)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 8
	Exp2           goto state 9

State 2

	%start_pExp2 -> . Exp2                              (rule 2)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 6

State 3

	Integer -> . L_integ                                (rule 3)

	L_integ        shift, and enter state 4


State 4

	Integer -> L_integ .                                (rule 3)

	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'iadd'         reduce using rule 3
	L_integ        reduce using rule 3
	%eof           reduce using rule 3


State 5

	Exp2 -> Integer .                                   (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	'*'            reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'/'            reduce using rule 12
	'iadd'         reduce using rule 12
	L_integ        reduce using rule 12
	%eof           reduce using rule 12


State 6

	%start_pExp2 -> Exp2 .                              (rule 2)

	%eof           accept


State 7

	Exp2 -> '(' . Exp ')'                               (rule 13)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 17
	Exp1           goto state 11
	Exp2           goto state 9

State 8

	%start_pExp1 -> Exp1 .                              (rule 1)
	Exp1 -> Exp1 . '*' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)

	'*'            shift, and enter state 12
	'/'            shift, and enter state 13
	%eof           accept


State 9

	Exp1 -> Exp2 .                                      (rule 11)

	'('            reduce using rule 11
	')'            reduce using rule 11
	'*'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'/'            reduce using rule 11
	'iadd'         reduce using rule 11
	L_integ        reduce using rule 11
	%eof           reduce using rule 11


State 10

	%start_pExp -> Exp .                                (rule 0)
	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp -> Exp . '-' Exp1                               (rule 5)
	Exp -> Exp . Exp 'iadd'                             (rule 6)
	Exp -> Exp . Exp                                    (rule 7)

	'('            shift, and enter state 7
	'+'            shift, and enter state 15
	'-'            shift, and enter state 16
	L_integ        shift, and enter state 4
	%eof           accept

	Integer        goto state 5
	Exp            goto state 14
	Exp1           goto state 11
	Exp2           goto state 9

State 11

	Exp -> Exp1 .                                       (rule 8)
	Exp1 -> Exp1 . '*' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)

	'('            reduce using rule 8
	')'            reduce using rule 8
	'*'            shift, and enter state 12
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'/'            shift, and enter state 13
	'iadd'         reduce using rule 8
	L_integ        reduce using rule 8
	%eof           reduce using rule 8


State 12

	Exp1 -> Exp1 '*' . Exp2                             (rule 9)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 23

State 13

	Exp1 -> Exp1 '/' . Exp2                             (rule 10)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 22

State 14

	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp -> Exp . '-' Exp1                               (rule 5)
	Exp -> Exp . Exp 'iadd'                             (rule 6)
	Exp -> Exp Exp . 'iadd'                             (rule 6)
	Exp -> Exp . Exp                                    (rule 7)
	Exp -> Exp Exp .                                    (rule 7)

	'('            shift, and enter state 7
			(reduce using rule 7)

	')'            reduce using rule 7
	'+'            shift, and enter state 15
			(reduce using rule 7)

	'-'            shift, and enter state 16
			(reduce using rule 7)

	'iadd'         shift, and enter state 21
			(reduce using rule 7)

	L_integ        shift, and enter state 4
			(reduce using rule 7)

	%eof           reduce using rule 7

	Integer        goto state 5
	Exp            goto state 14
	Exp1           goto state 11
	Exp2           goto state 9

State 15

	Exp -> Exp '+' . Exp1                               (rule 4)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 20
	Exp2           goto state 9

State 16

	Exp -> Exp '-' . Exp1                               (rule 5)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 19
	Exp2           goto state 9

State 17

	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp -> Exp . '-' Exp1                               (rule 5)
	Exp -> Exp . Exp 'iadd'                             (rule 6)
	Exp -> Exp . Exp                                    (rule 7)
	Exp2 -> '(' Exp . ')'                               (rule 13)

	'('            shift, and enter state 7
	')'            shift, and enter state 18
	'+'            shift, and enter state 15
	'-'            shift, and enter state 16
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 14
	Exp1           goto state 11
	Exp2           goto state 9

State 18

	Exp2 -> '(' Exp ')' .                               (rule 13)

	'('            reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	'iadd'         reduce using rule 13
	L_integ        reduce using rule 13
	%eof           reduce using rule 13


State 19

	Exp -> Exp '-' Exp1 .                               (rule 5)
	Exp1 -> Exp1 . '*' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)

	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            shift, and enter state 12
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'/'            shift, and enter state 13
	'iadd'         reduce using rule 5
	L_integ        reduce using rule 5
	%eof           reduce using rule 5


State 20

	Exp -> Exp '+' Exp1 .                               (rule 4)
	Exp1 -> Exp1 . '*' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)

	'('            reduce using rule 4
	')'            reduce using rule 4
	'*'            shift, and enter state 12
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'/'            shift, and enter state 13
	'iadd'         reduce using rule 4
	L_integ        reduce using rule 4
	%eof           reduce using rule 4


State 21

	Exp -> Exp Exp 'iadd' .                             (rule 6)

	'('            reduce using rule 6
	')'            reduce using rule 6
	'+'            reduce using rule 6
	'-'            reduce using rule 6
	'iadd'         reduce using rule 6
	L_integ        reduce using rule 6
	%eof           reduce using rule 6


State 22

	Exp1 -> Exp1 '/' Exp2 .                             (rule 10)

	'('            reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	'iadd'         reduce using rule 10
	L_integ        reduce using rule 10
	%eof           reduce using rule 10


State 23

	Exp1 -> Exp1 '*' Exp2 .                             (rule 9)

	'('            reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'/'            reduce using rule 9
	'iadd'         reduce using rule 9
	L_integ        reduce using rule 9
	%eof           reduce using rule 9


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 14
Number of terminals: 8
Number of non-terminals: 7
Number of states: 24
